clients/ingress_example/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: helloworld-service
      port:
        number: 8080
  rules:
  - host: helloworld-nsp.com
    http:
      paths:
      - pathType: Prefix
        path: /v1
        backend:
          service:
            name: nginix-service
            port:
              number: 80
      - pathType: Prefix
        path: /api2
        backend:
          service:
            name: helloworld-service
            port:
              number: 8080
