clients/ingress_example/ingress_nginx.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: default
  labels:
    run: nginx
spec:
  selector:
    run: nginx
  ports:
  - port:  80
    protocol: TCP
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: nginx-service
      port:
        number: 80
  tls:
    - hosts:
      - 54.203.101.26.nip.io
      secretName: by-istio-ingressgateway-cp-v110x-58ec419f-acme-le-prod-cert
  rules:
  - host: 54.203.101.26.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /v1
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - pathType: Prefix
        path: /v2
        backend:
          service:
            name: helloworld-service
            port:
              number: 8080
